--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -2,6 +2,14 @@
   box-sizing: border-box;
 }
 
+.githubImg {
+  float: right;
+  margin: 0 auto;
+  position: relative;
+  top: 10px;
+  right: 10px;
+}
+
 // basic header styles
 header {
   // box-shadow: 0px 5px 5px #999999;
