--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,11 @@
     transform: rotate(360deg);
   }
 }
+
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
