--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+body {
+  transition: margin-left .5s;
+}
+
 .githubImg {
   float: right;
   margin: 0 auto;
@@ -12,7 +16,7 @@
 
 // basic header styles
 header {
-  // box-shadow: 0px 5px 5px #999999;
+  box-shadow: 0px 5px 5px #999999;
   height: 100px;
   width: 100%;
   position: relative;
@@ -23,32 +27,21 @@ header {
   @media (min-width: 768px) {
     /* display: none; */
   }
-} // styling of dropdown menu
+} 
+
+// styling of dropdown menu
 .mobile-header-nav {
   background-color: #e3e7ed;
   z-index: 1;
   height: 0px;
   list-style: none;
-  margin: 0; 
-  padding: 0; 
+  margin: 0;
+  padding: 0;
   position: absolute;
-  top: 100px; 
+  top: 100px;
   width: 20%;
+  border: 1px solid #999999;
   transition: all 0.3s ease-in-out;
-  .listItems {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    display: none;
-    a {
-      color: black;
-      display: block;
-      padding: 15px 0;
-      text-align: center;
-      text-decoration: none;
-      &:hover {
-        background-color: lighten(#222222, 5%);
-      }
-    }
-  }
 } // styling of nav menu
 .nav-menu {
   outline: none;
@@ -87,5 +80,53 @@ header {
         transform-origin: 8px;
       }
     }
+  }
+}
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+  padding: 0;
+  background: none;
+  border: none;
+  color: white;
+  outline: 0;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
   }
 }
