--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -3,7 +3,7 @@
 }
 
 body {
-  transition: margin-left .5s;
+  transition: .5s;
 }
 
 .githubImg {
@@ -12,11 +12,13 @@ body {
   position: relative;
   top: 10px;
   right: 10px;
+  background: white;
+  border-radius: 10px;
 }
 
 // basic header styles
 header {
-  box-shadow: 0px 5px 5px #999999;
+  // box-shadow: 0px 5px 5px #999999;
   height: 100px;
   width: 100%;
   position: relative;
@@ -58,7 +60,7 @@ header {
     cursor: pointer;
   }
   .menu-item {
-    background: black;
+    background: linear-gradient(90deg, rgba(37,47,73,1) 0%, rgba(197,203,223,1) 50%, rgba(68,79,112,1) 100%);
     display: block;
     height: 3px;
     margin: 0 0 10px;
