--- a/src/App.scss
+++ b/src/App.scss
@@ -88,27 +88,17 @@ html, body {
   }
 }
 
-#title{
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  
-  color: #FFF;
-  text-align: center;
-  font-family: 'lato',sans-serif;
-  font-weight: 300;
-  font-size: 50px;
-  letter-spacing: 10px;
-  
-  margin-top: -60px;
-  padding-left: 10px;
-}    
 @keyframes animStar{
   from{	
     transform: translateY(0px);
   }
   to{	
     transform: translateY(-2000px);
+  }
+}
+
+@media only screen and (max-width: 990px){
+  html, body{
+    overflow: auto;
   }
 }
