--- a/src/App.scss
+++ b/src/App.scss
@@ -10,27 +10,12 @@ $shadows-small:  multiple-box-shadow(700);
 $shadows-medium: multiple-box-shadow(200);
 $shadows-big:    multiple-box-shadow(100);
 
-.App {
-  text-align: center;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 html, body {
   width: 100%;
   height: 100%;
   margin: 0px;
   padding: 0px;
-  overflow: hidden;
+  overflow: auto;
   background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(23,26,38,1) 50%, rgba(0,0,0,1) 100%);
 }
 
@@ -44,7 +29,7 @@ html, body {
   &:after{
     content: " ";
     position: absolute;
-    top: 2000px;
+    top: 200px;
     width: 1px;
     height: 1px;
     background: transparent;
@@ -62,7 +47,7 @@ html, body {
   &:after{
     content: " ";
     position: absolute;
-    top: 2000px;
+    top: 200px;
     width: 2px;
     height: 2px;
     background: transparent;
@@ -80,7 +65,7 @@ html, body {
   &:after{
     content: " ";
     position: absolute;
-    top: 2000px;
+    top: 200px;
     width: 3px;
     height: 3px;
     background: transparent;
