--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -6,6 +6,11 @@ body {
   transition: .5s;
 }
 
+.logo {
+  height: 70px;
+  width: 70px;
+}
+
 .githubImg {
   float: right;
   margin: 0 auto;
@@ -96,19 +101,19 @@ header {
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
-}
 
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
+  a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
 
-.sidenav a:hover {
-  color: #f1f1f1;
+    &:hover {
+      color: #f1f1f1;
+    }
+  }
 }
 
 .sidenav .closebtn {
