Added React-Spring components and changed animations

--- a/src/components/Arrow/Arrow.scss
+++ b/src/components/Arrow/Arrow.scss
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Space+Mono');
+
 $arrowColor: linear-gradient(90deg, rgba(37,47,73,1) 0%, rgba(197,203,223,1) 50%, rgba(68,79,112,1) 100%);
 
 .arrowMenu {
+    // font-family: "Space Mono", monospace;
     outline: none;
     border: none;
     background: none;
