--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Space+Mono');
+
 #name {
+    font-family: "Space Mono", monospace;
     color: white;
     font-size: 100px;
 }
