--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -1,3 +1,29 @@
-h1, p {
-    color: white;
+.skills {
+    background-color: #808385;
+    border-radius: 25px;
+    padding: 25px;
 }
+
+.aboutText {
+    background-color: #808385;
+    border-radius: 25px;
+    padding: 25px;
+}
+
+.progress {
+    width: 100%;
+    height: 50px;
+}
+  
+.progress-wrap {
+    background: #f80;
+    margin: 20px 0;
+    overflow: hidden;
+    position: relative;
+    .progress-bar {
+      background: #ddd;
+      left: 0;
+      position: absolute;
+      top: 0;
+    }
+  }
