--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Space+Mono');
 
-#name {
+.name {
     font-family: "Space Mono", monospace;
     color: white;
     font-size: 100px;
