--- a/src/App.scss
+++ b/src/App.scss
@@ -20,8 +20,9 @@ html, body {
 }
 
 #stars {
-  width: 1px;
-  height: 1px;
+  width: 3px;
+  height: 3px;
+  border-radius: 50%;
   background: transparent;
   box-shadow: $shadows-small;
   animation: animStar 100s linear;
@@ -38,8 +39,9 @@ html, body {
 }
 
 #stars2 {
-  width: 2px;
-  height: 2px;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
   background: transparent;
   box-shadow: $shadows-medium;
   animation: animStar 150s linear infinite;
@@ -56,8 +58,9 @@ html, body {
 }    
 
 #stars3{
-  width: 3px;
-  height: 3px;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
   background: transparent;
   box-shadow: $shadows-big;
   animation: animStar 200s linear infinite;
