--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -3,3 +3,12 @@
     padding: 25px;
     border-radius: 25px;
 }
+
+.linkedinLogo {
+    height: 10vw;
+    width: 10vw
+}
+
+.email {
+    font-size: 30px;
+}
