--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -2,12 +2,62 @@
     background-color: #808385;
     border-radius: 25px;
     padding: 25px;
+    box-shadow: 7px 8px 0px 0px rgba(82,79,77,1);
+
+    .screw {
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        background: #b8bbc1;
+        border-radius: 50%;
+    }
+    .top-left {
+        top: 10px;
+        left: 25px;
+    }
+    .top-right {
+        top: 10px;
+        right: 25px;
+    }
+    .bottom-left {
+        bottom: 10px;
+        left: 20px;
+    }
+    .bottom-right {
+        bottom: 10px;
+        right: 20px;
+    }
 }
 
 .aboutText {
     background-color: #808385;
     border-radius: 25px;
     padding: 25px;
+    box-shadow: 7px 8px 0px 0px rgba(82,79,77,1);
+
+    .screw {
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        background: #b8bbc1;
+        border-radius: 50%;
+    }
+    .top-left {
+        top: 10px;
+        left: 10px;
+    }
+    .top-right {
+        top: 10px;
+        right: 10px;
+    }
+    .bottom-left {
+        bottom: 10px;
+        left: 10px;
+    }
+    .bottom-right {
+        bottom: 10px;
+        right: 10px;
+    }
 }
 
 .progress {
