--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -2,6 +2,32 @@
     background-color: #808385;
     padding: 25px;
     border-radius: 25px;
+    position: relative;
+    box-shadow: 7px 8px 0px 0px rgba(82,79,77,1);
+
+    .screw {
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        background: #b8bbc1;
+        border-radius: 50%;
+    }
+    .top-left {
+        top: 10px;
+        left: 10px;
+    }
+    .top-right {
+        top: 10px;
+        right: 10px;
+    }
+    .bottom-left {
+        bottom: 10px;
+        left: 10px;
+    }
+    .bottom-right {
+        bottom: 10px;
+        right: 10px;
+    }
 }
 
 .linkedinLogo {
@@ -12,3 +38,6 @@
 .email {
     font-size: 30px;
 }
+
+
+  
