--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -5,3 +5,9 @@
     color: white;
     font-size: 100px;
 }
+
+@media screen and (max-height: 480px) {
+    .name {
+        font-size: 5vw;
+    }
+}
