--- a/src/components/PageShell/PageShell.scss
+++ b/src/components/PageShell/PageShell.scss
@@ -1,12 +1,12 @@
 .SlideIn-appear {
     transform: translateX(50px);
     opacity: 0;
+    overflow: hidden;
 }
 
 .SlideIn-appear.SlideIn-appear-active {
     opacity: 1;
     transform: translateX(0);
-    ;
     transition: all 0.6s linear;
 }
 
